# sentient-core

./: .gitignore  ARCHITECTURE.md  CLI_DEPLOYMENT_GUIDE.md  DOCUMENTATION_MANIFEST.md  FAST_MODE_IMPLEMENTATION.md  Makefile  PRODUCTION_STATUS.md  QUICKSTART.md  README.md  REBUILD_PLAN.md  TESTING_GUIDE.md  launch-testing.sh  pyproject.toml  requirements-cli.txt  requirements-voice.txt  requirements.txt
config/: cortana.toml
interfaces/: CLI_SETUP.md  README.md  VOICE_IMPLEMENTATION_SUMMARY.md  VOICE_MODE.md  VOICE_QUICKSTART.md  VOICE_README.txt  cli.py  demo-cli.sh  install_voice.sh  start-cli.sh  test-cli.sh  test_voice.py  voice.py
personality/: DEPLOYMENT_SUMMARY.txt  IMPLEMENTATION_GUIDE.md  INDEX.md  README.md
services/: AVATAR_BRIDGE_QUICKSTART.md  AVATAR_BRIDGE_README.md  IMPLEMENTATION_SUMMARY.md  MEMORY_DELIVERY.md  MEMORY_FEATURES.md  MEMORY_QUICKREF.md  MEMORY_README.md  NOTIFICATIONS_API.md  NOTIFICATIONS_INDEX.md  NOTIFICATIONS_INTEGRATION.md  NOTIFICATIONS_QUICKREF.txt  NOTIFICATIONS_README.md  NOTIFICATIONS_SUMMARY.md  PERCEPTION_README.md  PROACTIVE_DELIVERY_SUMMARY.md  PROACTIVE_ENGINE.md  QUICKSTART.md  README_PROACTIVE.md  README_wake_word.md  avatar_bridge.py  contemplation.py  contemplation_http.py  conversation.py  install_memory.sh  install_perception.sh  install_proactive.sh  memory.py  memory_api.py  memory_cli.py  memory_http.py  memory_integration_example.py  notifications.py  notifications_example.py  perception.py  perception.service  perception_http.py  proactive.py  requirements-notifications.txt  requirements-proactive.txt  (+6 more)
(+102 files in other folders)
